--- a/web/conso.html
+++ b/web/conso.html
@@ -5,6 +5,7 @@
         <title>Consommation du cumulus</title>
 <script src="../amcharts/amcharts.js" type="text/javascript"></script>
 <script src="../amcharts/serial.js" type="text/javascript"></script>
+<script src="../amcharts/gauge.js" type="text/javascript"></script>
 <script type="text/javascript">
            var chart;
             var graph;
@@ -14,6 +15,7 @@ chart = AmCharts.makeChart("chartdiv",{
 		"theme": "none",
            "pathToImages": "http://www.amcharts.com/lib/3/images/",
            "dataDateFormat": "YYYY-MM-DD JJ:NN:SS",
+	   "columnWidth": 0.1,
           "valueAxes": [{
             "id":"v1",
             "axisAlpha": 0,
@@ -21,7 +23,7 @@ chart = AmCharts.makeChart("chartdiv",{
         }],
         "graphs": [{
 			"id": "g1",
-			"type": "column",
+			"type": "step",
 			"lineThickness": 2,
 			"fillAlphas": 0.4,
 			"title": "red line",
@@ -42,7 +44,7 @@ chart = AmCharts.makeChart("chartdiv",{
             "dashLength": 1,
             "minorGridEnabled": true,
             "position": "top",
-	   "minPeriod": "mm"
+	   "minPeriod": "15mm"
         }
 });
 AmCharts.loadJSON = function(url) {
@@ -66,11 +68,64 @@ chart.addListener("rendered", zoomChart);
 chart.invalidateSize();
 zoomChart();
 function zoomChart(){
-    chart.zoomToIndexes(chart.dataProvider.length - 40, chart.dataProvider.length - 1);}
+    chart.zoomToIndexes(chart.dataProvider.length - 40, chart.dataProvider.length - 1);
+}
+
+	   AmCharts.makeChart("cumulusGaugeChartdiv",
+	   {
+	   "type": "gauge",
+	   "pathToImages": "http://cdn.amcharts.com/lib/3/images/",
+	   "arrows": [
+	   {
+	   "id": "GaugeArrow-1"
+	   }
+	   ],
+	   "axes": [
+	   {
+	   "bottomText": "watt heure",
+	   "bottomTextYOffset": -20,
+	   "endValue": 220,
+	   "id": "GaugeAxis-1",
+	   "valueInterval": 10,
+	   "bands": [
+	   {
+	   "color": "#00CC00",
+	   "endValue": 90,
+	   "id": "GaugeBand-1",
+	   "startValue": 0
+	   },
+	   {
+	   "color": "#ffac29",
+	   "endValue": 130,
+	   "id": "GaugeBand-2",
+	   "startValue": 90
+	   },
+	   {
+	   "color": "#ea3838",
+	   "endValue": 220,
+	   "id": "GaugeBand-3",
+	   "innerRadius": "95%",
+	   "startValue": 130
+	   }
+	   ]
+	   }
+	   ],
+	   "allLabels": [],
+	   "balloon": {},
+	   "titles": [
+	   {
+	   "id": "Title-1",
+	   "size": 15,
+	   "text": "Cumulus "
+	   }
+	   ]
+	   }
+	   );
 </script>
 </head>
 
 <body>
-    <div id="chartdiv" style="width: 1024px; height: 768px;"></div>
+    <div id="chartdiv" style="width: 900px; height: 500px; float:left;"></div>
+    <div id="cumulusGaugeChartdiv" style="width: 350px; height: 350px; background-color: #FFFFFF; float:left;" ></div>
 </body>
 </html>
