--- a/web/conso.html
+++ b/web/conso.html
@@ -7,10 +7,9 @@
 		<script src="../amcharts/serial.js" type="text/javascript"></script>
 		<script src="../amcharts/gauge.js" type="text/javascript"></script>
 		<script type="text/javascript">
-			var chart;
 			var graph;
 
-			chart = AmCharts.makeChart(
+			var chart = AmCharts.makeChart(
 				"cumulusQuarterchartdiv",{
 					"type": "serial",
 					"theme": "none",
@@ -49,37 +48,40 @@
 					}
 				}
 			);
-			gaugeChart = AmCharts.makeChart(
+			var gaugeChart = AmCharts.makeChart(
 			"cumulusGaugeChartdiv", {
 				"type": "gauge",
 				"pathToImages": "http://cdn.amcharts.com/lib/3/images/",
-				"arrows": [{
-					"id": "GaugeArrow-1"
-				}],
+			        "arrows": [
+                                   {
+                                     "id": "GaugeArrow-1",
+                                     "value": 87
+			           }
+			        ],
 				"axes": [{
 					"bottomText": "watt heure",
 					"bottomTextYOffset": -20,
-					"endValue": 220,
+					"endValue": 3000,
 					"id": "GaugeAxis-1",
-					"valueInterval": 10,
+					"valueInterval": 1000,
 					"bands": [{
 							"color": "#00CC00",
-							"endValue": 90,
+							"endValue": 1000,
 							"id": "GaugeBand-1",
 							"startValue": 0
 						},
 						{
 							"color": "#ffac29",
-							"endValue": 130,
+							"endValue": 2000,
 							"id": "GaugeBand-2",
-							"startValue": 90
+							"startValue": 1000
 						},
 						{
 							"color": "#ea3838",
-							"endValue": 220,
+							"endValue": 3000,
 							"id": "GaugeBand-3",
 							"innerRadius": "95%",
-							"startValue": 130
+							"startValue": 2000
 						}
 					]
 				}],
@@ -93,6 +95,32 @@
 			}
 			);
 
+function updateSimpleValueFromWeb() {
+var url="http://78.221.47.212/appname/consoInstantanee.py";
+url="http://78.221.47.212/appname/random.py";
+
+                                if (window.XMLHttpRequest) {
+                                        var request = new XMLHttpRequest();
+                                } else {
+                                        var request = new ActiveXObject('Microsoft.XMLHTTP');
+                                }
+                                request.open('GET', url, false);
+                                request.send();
+                                var value = eval(request.responseText);
+console.debug(value);
+  if(gaugeChart){
+    if(gaugeChart.arrows){
+      if(gaugeChart.arrows[0]){
+        if(gaugeChart.arrows[0].setValue){
+          gaugeChart.arrows[0].setValue(value);
+          gaugeChart.axes[0].setBottomText(value + " watt heure");
+        }
+      }
+    }
+  }
+}
+gaugeChart.addListener("rendered", updateSimpleValueFromWeb);
+setInterval(updateSimpleValueFromWeb, 1000);
 			AmCharts.loadJSON = function(url) {
 				if (window.XMLHttpRequest) {
 					var request = new XMLHttpRequest();
@@ -104,18 +132,9 @@
 				return eval(request.responseText);
 			};
 			var time = (new Date()).getTime();
-			console.debug(time);
 			var chartData = AmCharts.loadJSON('appname/consoData.py?time=' + time);
 			chart.dataProvider = chartData;
-			chart.addListener("rendered", zoomChart);
 			chart.invalidateSize();
-			
-			gaugeChart.arrows.value=30;
-
-			zoomChart();
-			function zoomChart(){
-				chart.zoomToIndexes(chart.dataProvider.length - 40, chart.dataProvider.length - 1);
-			}
 
 		</script>
 	</head>
