--- a/web/conso.html
+++ b/web/conso.html
@@ -6,12 +6,18 @@
 		<script src="../amcharts/amcharts.js" type="text/javascript"></script>
 		<script src="../amcharts/serial.js" type="text/javascript"></script>
 		<script src="../amcharts/gauge.js" type="text/javascript"></script>
-                <script src="../cumulus.js" type="text/javascript"></script>
+                <script src="../cumulus_quart.js" type="text/javascript"></script>
+                <script src="../cumulus_gauge.js" type="text/javascript"></script>
+                <script src="../cumulus_day.js" type="text/javascript"></script>
+                <script src="../cumulus_month.js" type="text/javascript"></script>
 
 	</head>
 
 <body>
-    <div id="cumulusQuarterchartdiv" style="width: 900px; height: 500px; float:left;"></div>
-    <div id="cumulusGaugeChartdiv" style="width: 350px; height: 350px; background-color: #FFFFFF; float:left;" ></div>
+    <div id="cumulusGaugeChartdiv" style="width: 350px; height: 350px; background-color: #FFFFFF;" ></div>
+    <div id="cumulusQuarterchartdiv" style="width: 900px; height: 500px;"></div>
+    <div id="cumulusDayChartdiv" style="width: 900px; height: 500px; background-color: #FFFFFF;" ></div>
+    <div id="cumulusMonthChartdiv" style="width: 900px; height: 500px; background-color: #FFFFFF;" ></div>
+
 </body>
 </html>
